--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,49 +1,56 @@
 {
-	"compilerOptions": {
-		"module": "esnext",
-		"declaration": true,
-		"removeComments": true,
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
-		"allowSyntheticDefaultImports": true,
-		"target": "ESNext",
-		"sourceMap": true,
-		"baseUrl": ".",
-		"incremental": true,
-		"skipLibCheck": true,
-		"strictNullChecks": false,
-		"noImplicitAny": false,
-		"strictBindCallApply": false,
-		"forceConsistentCasingInFileNames": true,
-		"noFallthroughCasesInSwitch": true,
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"strict": false,
-		"noEmit": true,
-		"esModuleInterop": true,
-		"moduleResolution": "bundler",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
-		"plugins": [
-			{
-				"name": "next"
-			}
-		],
-		"paths": {
+  "compilerOptions": {
+    "module": "esnext",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ESNext",
+    "sourceMap": true,
+    "baseUrl": ".",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "strict": false,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
       "@/*": [
         "./*"
       ]
     }
-	},
-	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
     "**/*.js",
-		"**/*.tsx",
+    "**/*.tsx",
     "**/*.jsx",
-		".next/types/**/*.ts",
-		"dist/types/**/*.ts"
-	],
-	"exclude": ["node_modules"]
+    ".next/types/**/*.ts",
+    "dist/types/**/*.ts",
+    "build/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
