--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,7 @@
 		"**/*.tsx",
     "**/*.jsx",
 		".next/types/**/*.ts",
+    "build/types/**/*.ts",
 		"dist/types/**/*.ts"
 	],
 	"exclude": ["node_modules"]
